--- a/MVC/4/DomeApp/DomeApp/Views/BlogPost/Index.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/BlogPost/Index.cshtml
@@ -18,6 +18,7 @@
         <div class="pull-right">
             @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-success" })
         </div>
+        <div class="clearfix">&nbsp;</div>
     }
 </div>
 
