--- a/C#/Desktop/LightPlayer/LightPlayer/Views/Playlist.xaml
+++ b/C#/Desktop/LightPlayer/LightPlayer/Views/Playlist.xaml
@@ -5,6 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:interactivity="http://schemas.microsoft.com/expression/2010/interactivity"
       xmlns:pinteractivity="clr-namespace:Microsoft.Practices.Prism.Interactivity;assembly=Microsoft.Practices.Prism.Interactivity"
+      xmlns:lightPlayer="clr-namespace:LightPlayer"
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
 	Title="Playlist"
@@ -12,7 +13,7 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*" MinHeight="40"/>
+            <RowDefinition Height="*" MinHeight="50"/>
             <RowDefinition Height="12*"/>
         </Grid.RowDefinitions>
 
@@ -25,12 +26,12 @@
                 </interactivity:EventTrigger>
             </interactivity:Interaction.Triggers>
         </MediaElement>
-        <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <Button Content=">" Command="{Binding CommandPlay}" CommandParameter="{Binding ElementName=media, Converter={StaticResource ResourceKey=MediaInteraction}}"/>
-            <Button Content="." Command="{Binding CommandStop}" CommandParameter="{Binding ElementName=media, Converter={StaticResource ResourceKey=MediaInteraction}}"/>
-            <Button Content="||" Command="{Binding CommandPause}" CommandParameter="{Binding ElementName=media, Converter={StaticResource ResourceKey=MediaInteraction}}"/>
+        <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" MinHeight="25">
+            <lightPlayer:MediaButton Content=">" Command="{Binding CommandPlay}" CommandParameter="{Binding ElementName=media, Converter={StaticResource ResourceKey=MediaInteraction}}" Style="{DynamicResource ButtonPlay}"/>
+            <lightPlayer:MediaButton Content="." Command="{Binding CommandStop}" CommandParameter="{Binding ElementName=media, Converter={StaticResource ResourceKey=MediaInteraction}}" Style="{DynamicResource ButtonPause}"/>
+            <lightPlayer:MediaButton Content="||" Command="{Binding CommandPause}" CommandParameter="{Binding ElementName=media, Converter={StaticResource ResourceKey=MediaInteraction}}" Style="{DynamicResource ButtonStop}"/>
         </StackPanel>
-        <ListView Grid.Row="1" ItemsSource="{Binding Playlist.Folder.Files}" SelectedItem="{Binding CurrentlyPlaying}" ScrollViewer.VerticalScrollBarVisibility="Auto">
+        <ListView Grid.Row="1" ItemsSource="{Binding Playlist.Folder.Files}" SelectedItem="{Binding CurrentlyPlaying}" ScrollViewer.VerticalScrollBarVisibility="Auto"  Style="{DynamicResource ListViewStyle}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Grid Height="20">
