--- a/C#/Desktop/LightPlayer/LightPlayer/App.xaml
+++ b/C#/Desktop/LightPlayer/LightPlayer/App.xaml
@@ -3,15 +3,20 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="Views/Folders.xaml"
              xmlns:lightPlayer="clr-namespace:LightPlayer"
-             xmlns:converters="clr-namespace:LightPlayer.Converters">
+             xmlns:converters="clr-namespace:LightPlayer.Converters"
+             xmlns:system="clr-namespace:System;assembly=mscorlib">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Styles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             <lightPlayer:ViewModelLocator x:Key="Locator" />
-            <converters:MultiValueParams x:Key="MultiValueParams"/>
+            <converters:MediaElementStringParamsTuple x:Key="MediaElementStringParamsTuple"/>
+            <converters:MediaElementIntParamsTuple x:Key="MediaElementIntParamsTuple"/>
             <converters:MediaInteractionConverter x:Key="MediaInteraction"/>
+            <converters:TimeConverterFromSeconds x:Key="TimeConverterFromSeconds"/>
+            <system:Boolean x:Key="True">True</system:Boolean>
+            <system:Boolean x:Key="False">False</system:Boolean>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
