--- a/AngularDemo/AngularDemo/Views/Shared/_Layout.cshtml
+++ b/AngularDemo/AngularDemo/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
-<body ng-app>
+<body ng-app="demoModule">
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -39,6 +39,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/angularjs")
+    @Scripts.Render("~/bundles/angular_demo")
     @RenderSection("scripts", required: false)
 </body>
 </html>
