separated the github service and user details from main index page respectively main scripts file

--- a/AngularDemo/AngularDemo/Views/Shared/_Layout.cshtml
+++ b/AngularDemo/AngularDemo/Views/Shared/_Layout.cshtml
@@ -1,12 +1,13 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
+
 <body ng-app="demoModule">
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
@@ -39,6 +40,13 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/angularjs")
+    <script>
+        /// the order of this initialization is important to come before proprietary scripts that use angular module, as the module has to be registered before any of them loads
+        /// none of the proprietary scripts can be guaranteed to be ran first (hence none can be responsible for the module registration)
+        (function () {
+            var app = angular.module('demoModule', []);
+        }());
+    </script>
     @Scripts.Render("~/bundles/angular_demo")
     @RenderSection("scripts", required: false)
 </body>
