--- a/bonvivaui/bonvivaui/src/app/login/login.component.scss
+++ b/bonvivaui/bonvivaui/src/app/login/login.component.scss
@@ -1,7 +1,7 @@
 
-.username,
-.password {
-  display: block;
-  width: 300px;
-  margin: 20px auto;
-}
+// .username,
+// .password {
+//   display: block;
+//   width: 300px;
+//   margin: 20px auto;
+// }
