--- a/bonvivaui/bonvivaui/src/app/login/login.component.html
+++ b/bonvivaui/bonvivaui/src/app/login/login.component.html
@@ -1,18 +1,18 @@
 <div>
   <div>
     <mat-form-field>
-      <input matInput placeholder="login">
+      <input matInput placeholder="username" #username required/>
     </mat-form-field>
   </div>
   <div>
     <mat-form-field>
-      <input matInput type="password" placeholder="password">
+      <input matInput type="password" placeholder="password" disabled>
     </mat-form-field>
 
   </div>
 
   <div>
-    <button mat-raised-button (click)="login()">
+    <button mat-raised-button (click)="login(username.value)" [disabled]="username.value ===''">
       login
     </button></div>
 </div>
