--- a/bonvivaui/bonvivaui/src/app/network-size/network-size.component.html
+++ b/bonvivaui/bonvivaui/src/app/network-size/network-size.component.html
@@ -6,12 +6,12 @@
     <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"> -->
     <mat-card-content>
 
-        <span>current network size: <b>{{size}}</b></span>
+        <span>current network size: <b>{{_size}}</b></span>
 
     </mat-card-content>
     <mat-card-content>
 
-        your network of friends plays a central role in earning <> bonviva points<>. make sure your friends use it
+        your network of friends plays a central role in earning <b>bonviva points</b>. make sure your friends use it
                 to make the most of it
 
     </mat-card-content>
