--- a/bonvivaui/bonvivaui/src/app/login/login.component.html
+++ b/bonvivaui/bonvivaui/src/app/login/login.component.html
@@ -12,7 +12,7 @@
   </div>
 
   <div>
-    <button mat-raised-button (click)="login(username.value)" [disabled]="username.value ===''">
+    <button mat-raised-button (click)="login(username.value)"  style="width: 100%;" [disabled]="username.value ===''">
       login
     </button></div>
 </div>
