--- a/bonvivaui/bonvivaui/src/app/network-size/network-size.component.html
+++ b/bonvivaui/bonvivaui/src/app/network-size/network-size.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+
     <mat-card-header>
         
         <mat-card-title><mat-icon mat-card-icon>people</mat-icon> network</mat-card-title>
@@ -27,6 +27,8 @@
     </mat-card-content>
     <mat-card-actions>
         <!-- <mat-icon class="mat-icon-rtl-mirror" svgIcon="thumb-up"></mat-icon> -->
-        <button mat-raised-button color='primary'>add more</button>
+        <button mat-raised-button color='primary' disabled><mat-icon >add</mat-icon>add more</button>
     </mat-card-actions>
-</mat-card>
+
+ 
+        
