--- a/bonvivaui/bonvivaui/src/app/points/points.component.html
+++ b/bonvivaui/bonvivaui/src/app/points/points.component.html
@@ -1,7 +1,7 @@
 
     <mat-card-header>
         
-            <mat-card-title><mat-icon>money</mat-icon> points</mat-card-title>
+            <mat-card-title><mat-icon>money</mat-icon>loyalty points</mat-card-title>
             <mat-card-subtitle>points earned directly or through the network</mat-card-subtitle>
         </mat-card-header>
         <mat-card-content>
