--- a/bonvivaui/bonvivaui/src/app/home/home.component.html
+++ b/bonvivaui/bonvivaui/src/app/home/home.component.html
@@ -3,11 +3,11 @@
 
     <mat-list>
         <mat-list-item><button mat-stroked-button color='primary' home-button style="width: 100%;" routerLink="/ns" routerLinkActive="active">
-                <mat-icon mat-list-icon>people</mat-icon>network
+                <mat-icon mat-list-icon>people</mat-icon>my community
             </button></mat-list-item>
 
         <mat-list-item> <button mat-stroked-button color='primary' home-button style="width: 100%;" routerLink="/points" routerLinkActive="active">
-                <mat-icon>money</mat-icon>points
+                <mat-icon>money</mat-icon>loyalty points
             </button></mat-list-item>
 
             <mat-list-item> <button mat-stroked-button color='primary' home-button style="width: 100%;" routerLink="/products" routerLinkActive="active">
@@ -15,7 +15,7 @@
             </button></mat-list-item>
 
             <mat-list-item> <button mat-stroked-button color='primary' home-button style="width: 100%;" routerLink="/products" routerLinkActive="active">
-                <mat-icon>swap_horiz</mat-icon>transfer
+                <mat-icon>attach_money</mat-icon>investments
             </button></mat-list-item>
 
     </mat-list>
