UI: polishes the chat and investments components

--- a/bonvivaui/bonvivaui/src/app/home/home.component.html
+++ b/bonvivaui/bonvivaui/src/app/home/home.component.html
@@ -2,20 +2,29 @@
 <nav>
 
     <mat-list>
-        <mat-list-item><button mat-stroked-button color='primary' home-button style="width: 100%;" routerLink="/ns" routerLinkActive="active">
+        <mat-list-item><button mat-stroked-button color='primary' home-button style="width: 100%;" routerLink="/ns"
+                routerLinkActive="active">
                 <mat-icon mat-list-icon>people</mat-icon>my community
             </button></mat-list-item>
 
-        <mat-list-item> <button mat-stroked-button color='primary' home-button style="width: 100%;" routerLink="/points" routerLinkActive="active">
-                <mat-icon>money</mat-icon>loyalty points
+        <mat-list-item> <button mat-stroked-button color='primary' home-button style="width: 100%;" routerLink="/points"
+                routerLinkActive="active">
+                <mat-icon>money</mat-icon>loyalty
             </button></mat-list-item>
 
-            <mat-list-item> <button mat-stroked-button color='primary' home-button style="width: 100%;" routerLink="/products" routerLinkActive="active">
+        <mat-list-item> <button mat-stroked-button color='primary' home-button style="width: 100%;"
+                routerLink="/products" routerLinkActive="active">
                 <mat-icon>shopping_cart</mat-icon>products
             </button></mat-list-item>
 
-            <mat-list-item> <button mat-stroked-button color='primary' home-button style="width: 100%;" routerLink="/products" routerLinkActive="active">
+        <mat-list-item> <button mat-stroked-button color='primary' home-button style="width: 100%;"
+                routerLink="/investments" routerLinkActive="active">
                 <mat-icon>attach_money</mat-icon>investments
+            </button></mat-list-item>
+
+        <mat-list-item> <button mat-stroked-button color='primary' home-button style="width: 100%;"
+                routerLink="/qa" routerLinkActive="active">
+                <mat-icon>question_answer</mat-icon>ask community
             </button></mat-list-item>
 
     </mat-list>
