--- a/bonvivaui/bonvivaui/src/app/network-size/network-size.component.html
+++ b/bonvivaui/bonvivaui/src/app/network-size/network-size.component.html
@@ -1,7 +1,7 @@
 
     <mat-card-header>
         
-        <mat-card-title><mat-icon mat-card-icon>people</mat-icon> community</mat-card-title>
+        <mat-card-title><mat-icon mat-card-icon>people</mat-icon>my community</mat-card-title>
         <!-- <mat-card-subtitle>community peers who use bonviva</mat-card-subtitle> -->
     </mat-card-header>
     <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"> -->
